# ebnsf

./: .gitignore  Cargo.toml  README.md
src/: grammar.pest  lib.rs  main.rs
test/: bnf.ebnf
tests/: choice_all_mods.rs  grammars.rs  nested_group.ebnf  simple_group.ebnf  simple_groups.rs  simple_rules.rs
tests/common/: mod.rs
tests/snapshots/: choice_all_mods__choice_all_mods.snap  grammars__bnf.snap  grammars__semver2-0.snap  simple_groups__multiline_groups.snap  simple_groups__simple_groups.snap  simple_rules__simple_choice.snap  simple_rules__simple_optional.snap  simple_rules__simple_plus.snap  simple_rules__simple_star.snap
