[package]
name = "ebnsf"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A CLI to generate railroad (syntax) diagrams from EBNF specs"
repository = "https://github.com/brokenbyte/ebnsf"
readme = "README.md"
exclude = ["grammars/*", "doc/*"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
pest = "2.7.15"
pest_derive = "2.7.15"
railroad = { version = "0.3.2", features = ["resvg"] }

[dev-dependencies]
insta = "1.42.2"
